made carousel nav

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <div class="canvas">
             <div class="container">
                 <div id="flex-container" class="flex-container"></div>
-                <div id="left-btn" class="left-btn btn"><</i></div>
-                <div id="right-btn" class="right-btn btn">></i></div>    
+                <div id="left-btn" class="left-btn btn"><</div>
+                <div id="right-btn" class="right-btn btn">></div>
+                <div id="carousel-nav" class="carousel-nav">
+                    
+                </div>
             </div>
         </div>
         <script src="script.js"></script>
