just some indentation

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
                 <div id="flex-container" class="flex-container"></div>
                 <div id="left-btn" class="left-btn btn"><</div>
                 <div id="right-btn" class="right-btn btn">></div>
-                <div id="carousel-nav" class="carousel-nav">
-                    
-                </div>
+                <div id="carousel-nav" class="carousel-nav"></div>
             </div>
         </div>
         <script src="script.js"></script>
